Fix layout transitions
- dialog-rail no longer overflows on tablet/netbook

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -8,7 +8,7 @@
    .dialog {
       position: absolute;
       top: 0px;
-      left: 320px;
+      left: 316px;
       font-weight: normal;
       word-wrap: normal;
       width: 100%;
